# slider

./: pyproject.toml
.github/workflows/: build.yml
slider/: README.md  mkdb.py
