[tool.poetry]
name = "slider"
version = "0.1.0"
description = ""
authors = ["copyrite"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.1"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
